--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "http-server": "^0.11.1"
+  },
+  "scripts": {
+    "start": "./node_modules/.bin/http-server $DIRECTORY"
   }
 }
